header section update

--- a/style.css
+++ b/style.css
@@ -28,12 +28,14 @@ a {
 
 /* Header Section Start */
 header {
+  width: 100%;
   background-color: #F5FBFF;
   line-height: 50px;
-  /* position: fixed; */
+  position: fixed;
   top: 0;
-  left: 0;
-  width: 100%;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 9999;
 }
 
 header .top-header-wrapper {
