--- a/style.css
+++ b/style.css
@@ -131,7 +131,7 @@ header .main-header-wrapper .nav .checkbtn {
 .hero-section {
   background-image: url('./img/hero-img.webp');
   width: 100%;
-  height: 700px;
+  height: 100vh;
   background-position: center center;
   background-repeat: no-repeat;
   display: flex;
